--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
 <head>
 	<title>RÜTS</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	{{ $styles := resources.Get "scss/main.scss" | resources.ToCSS | resources.Minify }}
+	{{ $styles := resources.Get "scss/main.scss" | resources.ToCSS }}
 	<link rel="stylesheet" href="{{ $styles.Permalink }}">
 	<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
