--- a/assets/scss/typography.scss
+++ b/assets/scss/typography.scss
@@ -3,10 +3,10 @@
   font-family: 'Marcellus';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/marcellus-v7-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('/fonts/marcellus-v7-latin-regular.eot'); /* IE9 Compat Modes */
   src: local('Marcellus'), local('Marcellus-Regular'),
-       url('../fonts/marcellus-v7-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/marcellus-v7-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/marcellus-v7-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/marcellus-v7-latin-regular.woff') format('woff'), /* Modern Browsers */
 }
 
 /* overpass-mono-regular - latin */
@@ -14,10 +14,10 @@
   font-family: 'Overpass Mono';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/overpass-mono-v5-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('/fonts/overpass-mono-v5-latin-regular.eot'); /* IE9 Compat Modes */
   src: local('Overpass Mono Regular'), local('OverpassMono-Regular'),
-       url('../fonts/overpass-mono-v5-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/overpass-mono-v5-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/overpass-mono-v5-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/overpass-mono-v5-latin-regular.woff') format('woff'), /* Modern Browsers */
 }
 
 /* overpass-mono-700 - latin */
@@ -25,10 +25,10 @@
   font-family: 'Overpass Mono';
   font-style: normal;
   font-weight: 700;
-  src: url('../fonts/overpass-mono-v5-latin-700.eot'); /* IE9 Compat Modes */
+  src: url('/fonts/overpass-mono-v5-latin-700.eot'); /* IE9 Compat Modes */
   src: local('Overpass Mono Bold'), local('OverpassMono-Bold'),
-       url('../fonts/overpass-mono-v5-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/overpass-mono-v5-latin-700.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/overpass-mono-v5-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/overpass-mono-v5-latin-700.woff') format('woff'), /* Modern Browsers */
 }
 
 
