--- a/layouts/index.html
+++ b/layouts/index.html
@@ -37,8 +37,34 @@
 				</div>
 			</div>
 
+		{{ else if eq .Params.layout "gallery" }}
+			<div class="grid__12col grid__9col--desktop grid__3start--desktop mbsm mbmd--desktop">
+				<div class="grid__3start--desktop mbsm">
+					<a class="hoverUnderline" href="{{ .RelPermalink }}"><time class="dib mbxs letterspace" datetime="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "2006-01-02" }}</time></a>
+					<h1 class="upper letterspace">{{ .Title }}</h1>
+					<div class="mra border-bottom--pink border-width"></div>
+				</div>
+
+				<div class="dg df--desktop">
+					<div class="markdown mbxs prsm--desktop order2 order1--desktop flex__basis flex__grow--desktop">{{ .Content }}</div>
+				</div>
+				<!-- GALLERY -->
+				<div class="mbsm mbmd--desktop order1 order2--desktop flex__grow--desktop flex__basis flex__grow--desktop">
+					<div class="df--desktop mbsm mbmd--desktop">
+						<div class="flex--row masonry-2col--desktop mbsm">
+							{{ range (.Resources.ByType "image") }}
+								<figure class="mbsm">
+									<img src="{{ (.Resize "800x jpg").RelPermalink }}" srcset="{{ (.Resize "500x jpg").RelPermalink }} 500w, {{ (.Resize "800x jpg").RelPermalink }} 800w, {{ (.Resize "1000x jpg").RelPermalink }} 1000w" sizes="(min-width: 1100px) 1100px, 100vw" alt="{{ .Title }}" class="max-width" loading="lazy">
+									<figcaption class="mbsm--desktop color--mdgreen">{{ .Params.description }}</figcaption>
+								</figure>
+							{{ end }}
+						</div>
+					<div>
+				</div>
+			</div>
+
 		{{ else if eq .Params.layout "recipe" }}
-			<div class="grid_12col grid__9col--desktop grid__3start--desktop mbxs mbmd--desktop">
+			<div class="grid__12col grid__9col--desktop grid__3start--desktop mbxs mbmd--desktop">
 				<div class="grid__3start--desktop mbsm mbmd--desktop">
 					<a class="hoverUnderline" href="{{ .RelPermalink }}"><time class="dib mbxs letterspace" datetime="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "2006-01-02" }}</time></a>
 					<h1 class="upper letterspace">{{ .Title }}</h1>
@@ -62,7 +88,7 @@
 					</div>
 					<div class="mbsm order1 order2--desktop flex__grow--desktop flex__basis flex__grow--desktop">
 						{{ range (.Resources.ByType "image") }}
-							<img src="{{ (.Resize "800x jpg").RelPermalink }}" srcset="{{ (.Resize "500x jpg").RelPermalink }} 500w, {{ (.Resize "800x jpg").RelPermalink }} 800w, {{ (.Resize "1000x jpg").RelPermalink }} 1000w" sizes="(min-width: 1100px) 1100px, 100vw" alt="{{ .Title }}" class="max-width plxs plsm--desktop mbxs mbsm--desktop" loading="lazy">
+							<img src="{{ (.Resize "800x jpg").RelPermalink }}" srcset="{{ (.Resize "500x jpg").RelPermalink }} 500w, {{ (.Resize "800x jpg").RelPermalink }} 800w, {{ (.Resize "1000x jpg").RelPermalink }} 1000w" sizes="(min-width: 1100px) 1100px, 100vw" alt="{{ .Title }}" class="max-width mbxs mbsm--desktop" loading="lazy">
 						{{ end }}
 					</div>
 				</div>
