Added new posts, updated layout to include video, updated gallery grid and insect descriptions.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -29,12 +29,12 @@
 	<main class="bg--white rel mxs msm--desktop pvlg--desktop">
 		<div class="content dn--desktop">
 			<div class="mrxs mlxs mtsm mbsm">
-				<img src="/img/logo-h.svg">
+				<a href="/"><img src="/img/logo-h.svg"></a>
 			</div>
 		</div>
 
 		<div class="content pos-abs sidebar phmd prsm dn dib--desktop border-right--ltgreen">
-			<img src="/img/logo-v.svg" class="pos-sticky">
+			<a href="/"><img src="/img/logo-v.svg" class="pos-sticky"></a>
 		</div>
 
 		{{ block "main" . }}{{ end }}
