--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,118 +1,10 @@
 {{ define "main" }}
+
 <div class="phxs content content--grid grid--gapsm--desktop grid--rowgapsm--tablet grid--rowgapmd--desktop">
-	<!-- LOGO -->
-<!-- 	<div class="grid__1start--desktop">
-		<div class="mrxs mlxs mtxs mbxs dn--desktop">
-			<img src="/img/logo-h.png">
-		</div>
-		<div class="grid__2start--desktop phsm dn dib--desktop border-right--ltgreen">
-			<img src="/img/logo-v.png">
-		</div>
-	</div> -->
-	<!-- CONTENT-->
-	<!-- .Site.RegularPages -->
-		{{ if eq .Params.layout "short" }}
-		<!-- POST STYLE -->
-			<div class="pxs psm--desktop border--ltgreen grid_12col grid__9col--desktop grid__3start--desktop mbsm mbmd--desktop">
-				<div class="tc">
-					<a class="hoverUnderline" href="{{ .RelPermalink }}"><time class="dib mbxs letterspace" datetime="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "2006-01-02" }}</time></a>
-				</div>
-				<h1 class="tc upper letterspace">{{ .Title }}</h1>
-				<div class="mbsm mra mla border-bottom--pink border-width"></div>
-				<div class="markdown">{{ .Content }}</div>
-			</div>
-		{{ else if eq .Params.layout "article" }}
-			<div class="grid_12col grid__9col--desktop grid__3start--desktop mbxs mbmd--desktop">
-				<div class="grid__3start--desktop mbsm mbmd--desktop">
-					<a class="hoverUnderline" href="{{ .RelPermalink }}"><time class="dib mbxs letterspace" datetime="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "2006-01-02" }}</time></a>
-					<h1 class="upper letterspace">{{ .Title }}</h1>
-					<div class="mra border-bottom--pink border-width"></div>
-				</div>
-
-				<div class="dg df--desktop">
-					<div class="markdown mbsm prsm--desktop order2 order1--desktop flex__basis flex__grow--desktop">{{ .Content }}</div>
-				</div>
-			</div>
-
-		{{ else if eq .Params.layout "gallery" }}
-			<div class="grid__12col grid__9col--desktop grid__3start--desktop mbsm mbmd--desktop">
-				<div class="grid__3start--desktop mbsm">
-					<a class="hoverUnderline" href="{{ .RelPermalink }}"><time class="dib mbxs letterspace" datetime="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "2006-01-02" }}</time></a>
-					<h1 class="upper letterspace">{{ .Title }}</h1>
-					<div class="mra border-bottom--pink border-width"></div>
-				</div>
-
-				<div class="dg df--desktop">
-					<div class="markdown mbxs prsm--desktop order2 order1--desktop flex__basis flex__grow--desktop">{{ .Content }}</div>
-				</div>
-				<!-- GALLERY -->
-				<div class="mbsm mbmd--desktop order1 order2--desktop flex__grow--desktop flex__basis flex__grow--desktop">
-					<div class="df--desktop mbsm mbmd--desktop">
-						<div class="flex--row masonry-2col--desktop mbsm">
-							{{ range (.Resources.ByType "image") }}
-								<figure class="mbsm">
-									<img src="{{ (.Resize "800x jpg").RelPermalink }}" srcset="{{ (.Resize "500x jpg").RelPermalink }} 500w, {{ (.Resize "800x jpg").RelPermalink }} 800w, {{ (.Resize "1000x jpg").RelPermalink }} 1000w" sizes="(min-width: 1100px) 1100px, 100vw" alt="{{ .Title }}" class="max-width" loading="lazy">
-									<figcaption class="mbsm--desktop color--mdgreen">{{ .Params.description }}</figcaption>
-								</figure>
-							{{ end }}
-						</div>
-					<div>
-				</div>
-			</div>
-
-		{{ else if eq .Params.layout "recipe" }}
-			<div class="grid_12col grid__9col--desktop grid__3start--desktop mbxs mbmd--desktop">
-				<div class="grid__3start--desktop mbsm mbmd--desktop">
-					<a class="hoverUnderline" href="{{ .RelPermalink }}"><time class="dib mbxs letterspace" datetime="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "2006-01-02" }}</time></a>
-					<h1 class="upper letterspace">{{ .Title }}</h1>
-					<div class="mra border-bottom--pink border-width"></div>
-				</div>
-
-				<div class="dg df--desktop">
-					<div class="markdown mbsm prsm--desktop order2 order1--desktop flex__basis flex__grow--desktop">
-						<div class="mbsm mbsm--desktop">
-							{{ .Content }}
-						</div>
-
-						{{ with .Params.recipe }}
-							{{ range . }}
-								<details>
-									<summary class="mbxs mbsm--desktop"><h2 class="di">{{ .title }}</h2></summary>
-									<div>{{ .instructions | markdownify }}</div>
-								</details>
-							{{ end }}
-						{{ end }}
-					</div>
-					<div class="mbsm order1 order2--desktop flex__grow--desktop flex__basis flex__grow--desktop">
-						{{ range (.Resources.ByType "image") }}
-							<img src="{{ (.Resize "800x jpg").RelPermalink }}" srcset="{{ (.Resize "500x jpg").RelPermalink }} 500w, {{ (.Resize "800x jpg").RelPermalink }} 800w, {{ (.Resize "1000x jpg").RelPermalink }} 1000w" sizes="(min-width: 1100px) 1100px, 100vw" alt="{{ .Title }}" class="max-width plxs plsm--desktop mbxs mbsm--desktop" loading="lazy">
-						{{ end }}
-					</div>
-				</div>
-			</div>
-
-		{{ else }}
-		<!-- BLOG STYLE -->
-			<div class="grid_12col grid__9col--desktop grid__3start--desktop mbxs mbmd--desktop">
-				<div class="grid__3start--desktop mbsm mbmd--desktop">
-					<a class="hoverUnderline" href="{{ .RelPermalink }}"><time class="dib mbxs letterspace" datetime="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "2006-01-02" }}</time></a>
-					<h1 class="upper letterspace">{{ .Title }}</h1>
-					<div class="mra border-bottom--pink border-width"></div>
-				</div>
-
-				<div class="dg df--desktop">
-					<div class="markdown mbsm prsm--desktop order2 order1--desktop flex__basis flex__grow--desktop">{{ .Content }}</div>
-					<div class="mbsm border-left--ltgreen order1 order2--desktop flex__grow--desktop flex__basis flex__grow--desktop">
-						{{ range (.Resources.ByType "image") }}
-							<img src="{{ (.Resize "800x jpg").RelPermalink }}" srcset="{{ (.Resize "500x jpg").RelPermalink }} 500w, {{ (.Resize "800x jpg").RelPermalink }} 800w, {{ (.Resize "1000x jpg").RelPermalink }} 1000w" sizes="(min-width: 1100px) 1100px, 100vw" alt="{{ .Title }}" class="max-width plxs plsm--desktop mbxs mbsm--desktop" loading="lazy">
-						{{ end }}
-					</div>
-				</div>
-			</div>
-		{{ end }}
-		<div class="grid_12col grid__9col--desktop grid__3start--desktop mbxs mbmd--desktop">
-			<a class="button" href="/">&larr; Return</a>
-		</div>
+	{{ partial "post_content.html" . }}
+	<div class="grid_12col grid__9col--desktop grid__3start--desktop mbxs mbmd--desktop">
+		<a class="button" href="/">&larr; Return</a>
+	</div>
 </div>
 
 {{ end }}
