- Prevent FOIT - Add copyright, site description - Enable RSS - Remove unnecessary `author` and `draft: false` attributes from front matter - Optimized video cover - Page-specific titles - OpenGraph meta - Preload fonts - Improved semantics with `main`, `article`, and `nav` tags - Fixed missing `alt` attributes - Fixed responsive image `srcset`

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,3 +1,9 @@
+{{ define "description" }}{{ .Summary }}{{ end }}
+
+{{ define "head" }}
+{{ template "_internal/opengraph.html" . }}
+{{ end }}
+
 {{ define "main" }}
 
 <div class="phxs content content--grid grid--gapsm--desktop grid--rowgapsm--tablet grid--rowgapmd--desktop">
