Remove deprecated property.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -35,7 +35,7 @@
 	<link rel="preload" href="/fonts/overpass-mono-v5-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="stylesheet" href="{{ $styles.Permalink }}">
 	
-	{{ if (eq .URL "/") }}<script src="/loader.js" defer></script>{{ end }}
+	{{ if (eq .RelPermalink "/") }}<script src="/loader.js" defer></script>{{ end }}
 </head>
 <body class="bg--green">
 	<div class="bg--white rel mxs msm--desktop pvlg--desktop">
