--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -38,7 +38,7 @@
 	{{ if (eq .RelPermalink "/") }}<script src="/loader.js" defer></script>{{ end }}
 </head>
 <body class="bg--green">
-	<div class="bg--white rel mxs msm--desktop pvlg--desktop">
+	<div class="bg--white rel mxxs mxs--tablet msm--desktop pvlg--desktop">
 		<nav>
 			<div class="content dn--desktop">
 				<div class="mrxs mlxs mtsm mbsm">
