deploy: b5b1c8ce2fd2321d84b81aad1dabc13f83b4efc7

--- a/scss/main.css
+++ b/scss/main.css
@@ -1622,7 +1622,8 @@ h3, .h3 {
   letter-spacing: 0; }
 
 p {
-  color: #70756d; }
+  color: #70756d;
+  margin-bottom: 60px; }
 
 li {
   color: #70756d; }
@@ -1680,7 +1681,7 @@ summary {
   cursor: pointer; }
 
 .markdown p {
-  margin-bottom: 15px; }
+  margin-bottom: 30px; }
 
 .markdown ul {
   list-style-type: circle;
